--- a/ticket-frontend/package.json
+++ b/ticket-frontend/package.json
@@ -12,7 +12,9 @@
     "@copilotkit/react-core": "^1.10.6",
     "@copilotkit/react-textarea": "^1.10.6",
     "@copilotkit/react-ui": "^1.10.6",
+    "@copilotkit/runtime": "^1.10.6",
     "next": "16.0.7",
+    "openai": "^4.104.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
