--- a/ticket-frontend/package.json
+++ b/ticket-frontend/package.json
@@ -9,10 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ag-ui/client": "^0.0.42",
+    "@ag-ui/core": "^0.0.42",
+    "@ag-ui/langgraph": "^0.0.20",
+    "@ai-sdk/openai": "^2.0.80",
     "@copilotkit/react-core": "^1.10.6",
     "@copilotkit/react-textarea": "^1.10.6",
     "@copilotkit/react-ui": "^1.10.6",
     "@copilotkit/runtime": "^1.10.6",
+    "ai": "^5.0.108",
     "next": "16.0.7",
     "openai": "^4.104.0",
     "react": "19.2.0",
