--- a/ticket-frontend/package.json
+++ b/ticket-frontend/package.json
@@ -21,7 +21,8 @@
     "next": "16.0.7",
     "openai": "^4.104.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
